fixes spacing issues

--- a/grantly/src/reset.scss
+++ b/grantly/src/reset.scss
@@ -110,7 +110,6 @@ section {
 body {
   line-height: 1;
   height: 100%;
-  box-sizing: border-box;
 }
 ol,
 ul {
